--- a/Test.ipynb
+++ b/Test.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.samutils.ml2 import ML2"
+    "from src.masutils.ml2 import ML2"
    ]
   },
   {
@@ -350,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.samutils.ml3 import ML3"
+    "from src.masutils.ml3 import ML3"
    ]
   },
   {
@@ -1182,7 +1182,7 @@
     }
    ],
    "source": [
-    "print(ML3..__doc__)"
+    "print(ML3.__doc__)"
    ]
   },
   {
@@ -1734,7 +1734,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1748,7 +1748,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0e406bec50f52913348369e3dba25a643ebdf189eb91a17200e2168ecbed8ac3"
+   }
   }
  },
  "nbformat": 4,
